feat: introduce fluent message builder for dynamic message creation and enhance placeholder registration